# vibetype

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: dsa.csv
typing_game/: show_stat.py  tui.py  typelearn.tcss
vibetype/: __main__.py  base.py  tui.py  typelearn.tcss
vibetype/data/: anime.csv  dsa.csv  pokemon.csv  random.csv  script.py  vibetype_data.db  vibetype_stats.db
vibetype/screens/: about.py  add_cust.py  menu.py  mode.py  results.py  show_stat.py  type_space.py
