[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibetype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.7",
]

[project.scripts]
vibetype="vibetype.tui:main"

[tool.uv]
package=true

[tool.setuptools.packages.find]
where=["."]
include=["vibetype*"]

[tool.setuptools.package-data]
vibetype=[
    "*.tcss",
    "data/*.db",
]
